<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Move Right</string>
    <string name="action_settings">Settings</string>
    <string name="newGame">New Game</string>
    <string name="move_left">Move Left</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="timerValue">Play Time: %1$d</string>
    <string name="timerValue2">Time Left: %1$d</string>
    <string name="textView">Press Play to Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="play">play</string>
    <string name="totalPoints">Total Points</string>
    <string name="levels">levels</string>
    <string name="textview">pressplay</string>
    <string name="newgame">newgame</string>

</resources>
