
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.pondar.pacmankotlin.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/buttons"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/moveLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_left" />

    <Button
        android:id="@+id/moveRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_right"/>

    <Button
        android:id="@+id/moveUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_up"/>

    <Button
        android:id="@+id/moveDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_down"/>
</LinearLayout>


    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="631dp"
        android:layout_above="@id/buttons">

    </org.pondar.pacmankotlin.GameView>

        <TextView
            android:id="@+id/pointsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="24sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="0dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="94dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/pause" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="50dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="25dp"
        android:text="Time Left" />


    <!-- Notice how the custom view is referenced here with
    a full package path-->
</RelativeLayout>
